Fix vectormath issue with __SSE__ (variables not initialized), SDL2's SDL_cpuinfo was defining __SSE__ where SDL used scalar implementation. Fix shaders to work with Mac OGL 2.1;

--- a/visual/vs2012/contrib/contrib.vcxproj
+++ b/visual/vs2012/contrib/contrib.vcxproj
@@ -1411,6 +1411,19 @@
     <ClInclude Include="..\..\..\contrib\soil\stbi_DDS_aug.h" />
     <ClInclude Include="..\..\..\contrib\soil\stbi_DDS_aug_c.h" />
     <ClInclude Include="..\..\..\contrib\soil\stb_image_aug.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\scalar\cpp\boolInVec.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\scalar\cpp\floatInVec.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\scalar\cpp\mat_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\scalar\cpp\quat_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\scalar\cpp\vectormath_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\scalar\cpp\vec_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\boolInVec.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\floatInVec.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\mat_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\quat_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\vecidx_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\vectormath_aos.h" />
+    <ClInclude Include="..\..\..\contrib\vectormath\SSE\cpp\vec_aos.h" />
     <ClInclude Include="..\..\..\contrib\vorbis\backends.h" />
     <ClInclude Include="..\..\..\contrib\vorbis\bitrate.h" />
     <ClInclude Include="..\..\..\contrib\vorbis\books\coupled\res_books_51.h" />
@@ -2577,6 +2590,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\contrib\bullet\BulletMultiThreaded\SpuNarrowPhaseCollisionTask\readme.txt" />
+    <Text Include="..\..\..\contrib\vectormath\SSE\cpp\readme_e.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\contrib\freetype\src\pcf\README" />
