--- a/visual/vs2012/seed/seed.vcxproj
+++ b/visual/vs2012/seed/seed.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\Animation.cpp" />
+    <ClCompile Include="..\..\..\source\api\net\Address.cpp" />
+    <ClCompile Include="..\..\..\source\api\net\Socket.cpp" />
     <ClCompile Include="..\..\..\source\api\oal\oalMusic.cpp" />
     <ClCompile Include="..\..\..\source\api\oal\oalSound.cpp" />
     <ClCompile Include="..\..\..\source\api\oal\oalSoundSource.cpp" />
@@ -50,6 +52,7 @@
     <ClCompile Include="..\..\..\source\api\soil\soilTexture.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug SDL|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\api\theora\Theora.cpp" />
     <ClCompile Include="..\..\..\source\api\yajl\JsonReader.cpp" />
     <ClCompile Include="..\..\..\source\api\yajl\JsonWriter.cpp" />
     <ClCompile Include="..\..\..\source\Camera.cpp" />
@@ -94,6 +97,7 @@
     <ClCompile Include="..\..\..\source\JobManager.cpp" />
     <ClCompile Include="..\..\..\source\Key.cpp" />
     <ClCompile Include="..\..\..\source\Keyframe.cpp" />
+    <ClCompile Include="..\..\..\source\LeafMessage.cpp" />
     <ClCompile Include="..\..\..\source\LeakReport.cpp" />
     <ClCompile Include="..\..\..\source\Manager.cpp" />
     <ClCompile Include="..\..\..\source\map\GameMap.cpp" />
@@ -227,6 +231,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\Animation.h" />
+    <ClInclude Include="..\..\..\include\api\net\Address.h" />
+    <ClInclude Include="..\..\..\include\api\net\Socket.h" />
     <ClInclude Include="..\..\..\include\api\oal\oalMusic.h" />
     <ClInclude Include="..\..\..\include\api\oal\oalSound.h" />
     <ClInclude Include="..\..\..\include\api\oal\oalSoundSource.h" />
@@ -321,6 +327,7 @@
     <ClInclude Include="..\..\..\include\JobManager.h" />
     <ClInclude Include="..\..\..\include\Key.h" />
     <ClInclude Include="..\..\..\include\Keyframe.h" />
+    <ClInclude Include="..\..\..\include\LeafMessage.h" />
     <ClInclude Include="..\..\..\include\LeakReport.h" />
     <ClInclude Include="..\..\..\include\LocalDefines.h" />
     <ClInclude Include="..\..\..\include\Log.h" />
@@ -587,7 +594,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_LIB;BUILD_SDL2;DEBUG;SEED_ENABLE_OGL20;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;BUILD_SDL2;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <DisableSpecificWarnings>4521;4275</DisableSpecificWarnings>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -606,7 +613,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;BUILD_SDL2;RELEASE;SEED_ENABLE_OGL20;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;BUILD_SDL2;RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <DisableSpecificWarnings>4521;4275;4530</DisableSpecificWarnings>
       <ExceptionHandling>false</ExceptionHandling>
