Update travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ compiler:
   - gcc
   - clang
 script: ./buildall.sh
+before_install: sudo apt-get install qt5-qmake
 env:
   - BUILD=debug
   - BUILD=release
